[gd_scene load_steps=5 format=3 uid="uid://br7w3pr08t5sa"]

[ext_resource type="PackedScene" uid="uid://date34lajfywv" path="res://Scenes/particle.tscn" id="1_ksbmg"]
[ext_resource type="Script" path="res://Scenes/ElectricField.gd" id="1_sn6j8"]
[ext_resource type="Script" path="res://Scenes/Renderer.gd" id="3_bea0x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jnt6u"]
bg_color = Color(0.239216, 0.168627, 0.278431, 1)

[node name="World" type="Node2D"]

[node name="Renderer" type="Node2D" parent="." node_paths=PackedStringArray("electric_field")]
script = ExtResource("3_bea0x")
electric_field = NodePath("../ElectricField")

[node name="ElectricField" type="Node2D" parent="."]
script = ExtResource("1_sn6j8")

[node name="Particle5" parent="ElectricField" instance=ExtResource("1_ksbmg")]
position = Vector2(642, 322)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
mouse_default_cursor_shape = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jnt6u")

[node name="MarginContainer" type="MarginContainer" parent="Control/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 412.0
grow_horizontal = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="Vbox" type="VBoxContainer" parent="Control/HBoxContainer/Panel/MarginContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 4

[node name="Add" type="Button" parent="Control/HBoxContainer/Panel/MarginContainer/Vbox"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Add
"

[node name="Move" type="Button" parent="Control/HBoxContainer/Panel/MarginContainer/Vbox"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Move"

[node name="Edit" type="Button" parent="Control/HBoxContainer/Panel/MarginContainer/Vbox"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Edit"

[node name="Lock" type="Button" parent="Control/HBoxContainer/Panel/MarginContainer/Vbox"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Lock"

[node name="Control" type="Control" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="added_signal" from="ElectricField" to="Renderer" method="_on_electric_field_added_signal"]
[connection signal="pressed" from="Control/HBoxContainer/Panel/MarginContainer/Vbox/Add" to="ElectricField" method="_on_add_pressed"]
[connection signal="mouse_entered" from="Control/HBoxContainer/Control" to="ElectricField" method="_on_control_mouse_entered"]
[connection signal="mouse_exited" from="Control/HBoxContainer/Control" to="ElectricField" method="_on_control_mouse_exited"]
